# news_summary

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  deepseek_client.py  fetch_articles.py  gemini.py  locators.py  main.py  news_data.csv  pyproject.toml  requirements.txt  response_model.py  rss_feed_test.py  schema.py  selenium_cookies.json  substack_api.py  substack_playwright.py  substack_utils.py  utils.py  verify_draft.py
.github/workflows/: check-substack-auth.yml  daily-fetch.yml  weekly-digest.yml
tests/: rss_feed_test.py  uuid_vs_index_test.py  verify_draft.py
