[project]
name = "news-summary"
version = "0.1.0"
description = "Automated Hong Kong news digest generator"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "google-genai>=1.64.0",
    "markdown>=3.10.2",
    "markdownify>=1.2.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=0.21.1",
    "python-substack>=0.1.17",
    "requests>=2.32.5",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
]
